--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "bootstrap": "^4.4.1",
+    "react-bootstrap": "^1.0.0-beta.17"
   },
   "scripts": {
     "start": "react-scripts start",
